Add achievements and experience sections to index.html; update project live demo link

--- a/index.html
+++ b/index.html
@@ -368,6 +368,24 @@
   </div>
 </section>
 
+<section id="achievementsSec" style="padding: 50px 40px;">
+  <h1 style="font-size: 32px; color: rgb(215, 163, 215); margin-bottom: 30px; text-align: center;">Achievements</h1>
+  <div class="eduCard" style="margin: 0 auto; max-width: 900px;">
+    <h2 style="color: #2b0f4f;">🏆 Best Girl Team Award</h2>
+    <h3 style="color: #2b2b79;">Nexathon Hackathon</h3>
+    <p style="font-size: 20px; color: #1a191f;">Recognized for outstanding teamwork, innovation, and technical excellence at Nexathon Hackathon.</p>
+  </div>
+</section>
+
+<section id="experienceSec" style="padding: 50px 40px;">
+  <h1 style="font-size: 32px; color: rgb(215, 163, 215); margin-bottom: 30px; text-align: center;">Experience</h1>
+  <div class="eduCard" style="margin: 0 auto; max-width: 900px;">
+    <h2 style="color: #2b0f4f;">Summer Internship - Image Processing</h2>
+    <h3 style="color: #2b2b79;">MedxAi Technologies</h3>
+    <p style="font-size: 20px; color: #1a191f;">Worked on advanced image processing techniques and contributed to healthcare technology solutions during a summer internship at MedxAi Technologies.</p>
+  </div>
+</section>
+
  <section class="projectsSec" id="projects">
   <h1>My Projects</h1>
   <div class="projectsContainer">
@@ -377,7 +395,7 @@
       <p><strong>Tech:</strong> React, Node.js, Express, MongoDB</p>
       <div class="projectLinks">
         <a href="https://github.com/devdiyac/WorkDex" target="_blank">GitHub</a>
-        <a href="https://yourapp1.netlify.app" target="_blank">Live Demo</a>
+        <a href="https://react-todo-list-henna-nine.vercel.app/" target="_blank">Live Demo</a>
       </div>
     </div>
 
