--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 <section id="achievementsSec" style="padding: 50px 40px;">
   <h1 style="font-size: 32px; color: rgb(215, 163, 215); margin-bottom: 30px; text-align: center;">Achievements</h1>
-  <div class="eduCard" style="margin: 0 auto; max-width: 900px;">
+  <div class="eduCard" style="margin: 0 auto;">
     <h2 style="color: #2b0f4f;">🏆 Best Girl Team Award</h2>
     <h3 style="color: #2b2b79;">Nexathon Hackathon</h3>
     <p style="font-size: 20px; color: #1a191f;">Recognized for outstanding teamwork, innovation, and technical excellence at Nexathon Hackathon.</p>
@@ -379,7 +379,7 @@
 
 <section id="experienceSec" style="padding: 50px 40px;">
   <h1 style="font-size: 32px; color: rgb(215, 163, 215); margin-bottom: 30px; text-align: center;">Experience</h1>
-  <div class="eduCard" style="margin: 0 auto; max-width: 900px;">
+  <div class="eduCard" style="margin: 0 auto;">
     <h2 style="color: #2b0f4f;">Summer Internship - Image Processing</h2>
     <h3 style="color: #2b2b79;">MedxAi Technologies</h3>
     <p style="font-size: 20px; color: #1a191f;">Worked on advanced image processing techniques and contributed to healthcare technology solutions during a summer internship at MedxAi Technologies.</p>
