Enhance achievements and experience sections in index.html by adding project details for PocketPerks and updating internship description to reflect fullstack development and AI integration, including key contributions and responsibilities.

--- a/index.html
+++ b/index.html
@@ -374,15 +374,26 @@
     <h2 style="color: #2b0f4f;">🏆 Best Girl Team Award</h2>
     <h3 style="color: #2b2b79;">Nexathon Hackathon</h3>
     <p style="font-size: 20px; color: #1a191f;">Recognized for outstanding teamwork, innovation, and technical excellence at Nexathon Hackathon.</p>
+    <p style="font-size: 18px; color: #1a191f; margin-top: 15px;"><strong>Project:</strong> PocketPerks - A comprehensive solution developed during the hackathon that demonstrated innovative problem-solving and collaborative development skills. The platform brings local shop vendors onto an online platform, helping them digitize their businesses and reach a wider customer base.</p>
+    <div style="margin-top: 15px;">
+      <a href="https://github.com/Adhya2508/nexathon.git" target="_blank" style="text-decoration: none; background-color: rgb(227, 179, 227); color: #1a1a40; padding: 8px 12px; border-radius: 8px; font-weight: 500; transition: background-color 0.3s ease;">View Project on GitHub</a>
+    </div>
   </div>
 </section>
 
 <section id="experienceSec" style="padding: 50px 40px;">
   <h1 style="font-size: 32px; color: rgb(215, 163, 215); margin-bottom: 30px; text-align: center;">Experience</h1>
   <div class="eduCard" style="margin: 0 auto;">
-    <h2 style="color: #2b0f4f;">Summer Internship - Image Processing</h2>
+    <h2 style="color: #2b0f4f;">Summer Internship - Fullstack Development & AI Integration</h2>
     <h3 style="color: #2b2b79;">MedxAi Technologies</h3>
-    <p style="font-size: 20px; color: #1a191f;">Worked on advanced image processing techniques and contributed to healthcare technology solutions during a summer internship at MedxAi Technologies.</p>
+    <p style="font-size: 20px; color: #1a191f;">Developed a comprehensive fullstack application to facilitate doctors with patient diagnosis through AI model integration.</p>
+    <ul style="margin-top: 15px; padding-left: 20px;">
+      <li style="font-size: 18px; color: #1a191f;">Built end-to-end web application with modern frontend and robust backend architecture</li>
+      <li style="font-size: 18px; color: #1a191f;">Integrated AI models for automated patient diagnosis and medical image analysis</li>
+      <li style="font-size: 18px; color: #1a191f;">Developed YOLO-based models for real-time object detection and medical image processing</li>
+      <li style="font-size: 18px; color: #1a191f;">Implemented secure data handling and HIPAA-compliant patient information management</li>
+      <li style="font-size: 18px; color: #1a191f;">Collaborated with healthcare professionals to ensure clinical accuracy and usability</li>
+    </ul>
   </div>
 </section>
 
